# ai-intelligent-document-platform

./: .env.example  README.md  app.db  pyproject.toml  requirements.txt  test_mongo.py  walkthrough.md  walkthrough_1
app/: main.py
app/agents/: base.py  document_agent.py  embedding_agent.py  example_agent.py  sample_agent.py
app/agents/chat_agent/: graph.py  state.py  tools.py
app/agents/chat_agent/nodes/: agent_node.py  llm_node.py  memory_node.py  persist_node.py  retrieval_node.py
app/api/routes/: agent.py  chat.py  document.py  embedding.py
app/core/: config.py  exceptions.py  limiter.py  logging.py  token_counter.py  users.py
app/db/: chat_queries.py  database.py  mongodb.py
app/memory/: manager.py
app/models/: chat.py  document.py  user.py
app/schemas/: chat.py  document.py  embedding.py
app/tools/: document_tools.py  example_tool.py
skills/agent-development/: SKILL.md
