[project]
name = "fast-api-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "httpx>=0.28.1",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langgraph>=0.0.30",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.28.0",
]
