[project]
name = "fast-api-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi[standard]>=0.110.0",
    "httpx>=0.28.1",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=0.0.30",
    "prisma>=0.15.0",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.8.0",
    "pypdf>=6.13.0",
    "python-dotenv>=1.0.1",
    "structlog>=26.1.0",
    "supabase>=2.4.0",
    "uvicorn[standard]>=0.28.0",
    "motor>=3.4.0",
]
